Fixed the spacing for sidebar on mobile

--- a/app/views/partials/theme/simple/dashboard/sidebar.liquid
+++ b/app/views/partials/theme/simple/dashboard/sidebar.liquid
@@ -1,4 +1,4 @@
-<div class="py-4 bg-white shadow-sm lg:w-1/5 md:w-1/3" data-dashboard-sidebar>
+<div class="py-4 bg-white shadow-sm lg:w-1/5 md:w-1/3 mb-5 md:mb-0" data-dashboard-sidebar>
   <nav>
     <div class="mb-5">
       <span class="flex items-center pl-6 mb-1">
