--- a/app/views/partials/theme/simple/dashboard/profile/edit.liquid
+++ b/app/views/partials/theme/simple/dashboard/profile/edit.liquid
@@ -19,12 +19,12 @@
     </div>
   </div>
 
-  <div class="ml-2 border-l sm:flex-grow sm:pl-8 sm:order-2 border-1">
+  <div class="ml-2 md:border-l sm:flex-grow sm:pl-8 sm:order-2 border-1">
     <form action="/dashboard/profile" method="post">
       {% render 'authenticity_token', context: context %}
       <input type="hidden" name="_method" value="put" />
 
-      <div class="w-1/2">
+      <div class="lg::w-1/2">
         <div class="mb-6">
           <label class="block mb-2 cursor-pointer" for="name">{{ 'app.profiles.username' | t }}</label>
           <input id="name" name="profile[name]" value="{{ object.name }}" type="text" maxlength="45" class="w-full form-input" autocomplete="given-name">
