Static pages: faq, about us, terms

--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -18,10 +18,10 @@
             <a href="/" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.home' | t }}</a>
           </li>
           <li>
-            <a href="about-us" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.about_us' | t }}</a>
+            <a href="/about-us" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.about_us' | t }}</a>
           </li>
           <li>
-            <a href="terms-of-service" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.terms_of_service' | t }}</a>
+            <a href="/terms-of-service" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.terms_of_service' | t }}</a>
           </li>
         </ul>
       </div>
