--- a/app/views/partials/lib/data/queries/search/filters.liquid
+++ b/app/views/partials/lib/data/queries/search/filters.liquid
@@ -9,5 +9,7 @@
 
   hash_assign search_form['query'] = query
 
+  hash_assign search_form['statuses'] = 'app.statuses' | t
+
   return search_form
 %}
