--- a/app/views/partials/theme/simple/dashboard/orders/actions.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions.liquid
@@ -1,8 +1,8 @@
-{% if order.status.name == 'app.order_statuses.placed' %}
+{% if order.status.name == 'app.statuses.orders.placed' %}
   {% if order.properties.paid_at == null and role == 'seller' %}
-    <form action="/order_statuses/create" method="post">
+    <form action="/statuses/create" method="post">
       {% include 'authenticity_token' %}
-      <input type="hidden" name="status" value="app.order_statuses.paid"/>
+      <input type="hidden" name="status" value="app.statuses.orders.paid"/>
       <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
       <button class="button button-sm">{{ 'app.mark-as-paid' | t }}</button>
@@ -10,9 +10,9 @@
   {% endif %}
 
   {% if order.properties.paid_at == null and role == 'buyer' %}
-    <form action="/order_statuses/create" method="post" class="mt-2">
+    <form action="/statuses/create" method="post" class="mt-2">
       {% include 'authenticity_token' %}
-      <input type="hidden" name="status" value="app.order_statuses.paid"/>
+      <input type="hidden" name="status" value="app.statuses.orders.paid"/>
       <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
       <button class="button button-sm">{{ 'app.pay' | t }}</button>
@@ -24,20 +24,20 @@
   {% endif %}
 {% endif %}
 
-{% if order.status.name == 'app.order_statuses.placed' %}
-  <form action="/order_statuses/create" method="post" class="mt-2">
+{% if order.status.name == 'app.statuses.orders.placed' %}
+  <form action="/statuses/create" method="post" class="mt-2">
     {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.order_statuses.canceled"/>
+    <input type="hidden" name="status" value="app.statuses.orders.canceled"/>
     <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
     <button class="button button-sm button-secondary">{{ 'app.cancel' | t }}</button>
   </form>
 {% endif %}
 
-{% if order.status.name == 'app.order_statuses.paid' and role == 'seller' %}
-  <form action="/order_statuses/create" method="post" class="mt-2">
+{% if order.status.name == 'app.statuses.orders.paid' and role == 'seller' %}
+  <form action="/statuses/create" method="post" class="mt-2">
     {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.order_statuses.shipped"/>
+    <input type="hidden" name="status" value="app.statuses.orders.shipped"/>
     <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
     <button class="button button-sm button-secondary">{{ 'app.ship' | t }}</button>
