--- a/app/views/partials/lib/data/queries/items/search.liquid
+++ b/app/views/partials/lib/data/queries/items/search.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function query = 'lib/data/queries/items/search/build', limit: limit, owner: owner, params: params
+  function query = 'lib/data/queries/items/search/build', limit: limit, owner: owner, params: params, withStatuses: withStatuses
   function items = 'lib/data/queries/items/search/execute', query: query
 
   hash_assign items['query'] = query
