--- a/app/views/partials/theme/simple/dashboard/items/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/index.liquid
@@ -1,11 +1,18 @@
+  <a href="?" class="button {% if filters.query.status == blank %}{%else%}button-secondary{%endif%} button-sm"> {% print 'app.items.all' | t %} </a>
+{% for s in filters.statuses.items %}
+  <a href="?status={{ s[0] }}" class="button {% if s[0] == filters.query.status %}{%else%}button-secondary{%endif%} button-sm">
+    {{ s[1] }}
+  </a>
+{% endfor %}
+
 {% if items.results.size > 0 %}
   <table class="w-full table-auto">
     <thead>
       <tr>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.item" | t }}</th>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.items.attr.category" | t }}</th>
+        <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.status" | t }}</th>
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.created_at" | t }}</th>
-        <!-- <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.status" | t }}</th> -->
         <th class="px-4 py-2 text-lg font-medium text-left">{{ "app.dashboard-items.actions" | t }}</th>
       </tr>
     </thead>
@@ -16,16 +23,26 @@
             {% function item_url = 'link_to', path: '/items/', item: item %}
             <a href="{{ item_url }}">
               {{ item.name }}
-              <small> {% echo item.status.name | default: 'app.item_statuses.none' | t %}</small>
+              <small> {% print item.c__status | t %}</small>
             </a>
           </td>
           <td class="px-4 py-2 border-b">{{ item.category }}</td>
+
+          <td class="px-4 py-2 border-b">
+            <select class="form-select" name="status" data-item-status-object-id="{% print item.id %}" data-item-status-scope="app.statuses.items">
+              {% for s in filters.statuses.items %}
+                <option value="{{ s[0] }}" {% if item.status.name == s[0] %}selected{% endif %}>
+                  {{ s[1] }}
+                </option>
+              {% endfor %}
+            </select>
+          </td>
           <td class="px-4 py-2 border-b">{{ item.created_at | l }}</td>
           <!--
           <td class="px-4 py-2 border-b">
             {{ item.status.name | default: 'missing-state-invalid-order' | t }}
-            {% if item.order_status.timestamp %}
-            <br/><small>{{ item.order_status.timestamp | to_time | l }}</small>
+            {% if item.order.status.timestamp %}
+            <br/><small>{{ item.order.status.timestamp | to_time | l }}</small>
             {% endif %}
           </td>
           -->
