--- a/app/views/partials/theme/simple/dashboard/orders/actions/buyer.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions/buyer.liquid
@@ -1,8 +1,8 @@
-{% if order.status.name == 'app.order_statuses.placed' %}
+{% if order.status.name == 'app.statuses.orders.placed' %}
   {% if order.properties.paid_at == null %}
-    <form action="/order_statuses/create" method="post" class="mt-2">
+    <form action="/statuses/create" method="post" class="mt-2">
       {% include 'authenticity_token' %}
-      <input type="hidden" name="status" value="app.order_statuses.paid"/>
+      <input type="hidden" name="status" value="app.statuses.orders.paid"/>
       <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
       <button class="button button-sm">{{ 'app.pay' | t }}</button>
@@ -13,9 +13,9 @@
     </a>
   {% endif %}
 
-  <form action="/order_statuses/create" method="post" class="mt-2">
+  <form action="/statuses/create" method="post" class="mt-2">
     {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.order_statuses.canceled"/>
+    <input type="hidden" name="status" value="app.statuses.orders.canceled"/>
     <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
     <button class="button button-sm button-secondary">{{ 'app.cancel' | t }}</button>
