--- a/app/views/partials/theme/simple/dashboard/orders/actions/seller.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions/seller.liquid
@@ -1,28 +1,28 @@
-{% if order.status.name == 'app.order_statuses.placed' %}
+{% if order.status.name == 'app.statuses.orders.placed' %}
   {% if order.properties.paid_at == null %}
-    <form action="/order_statuses/create" method="post">
+    <form action="/statuses/create" method="post">
       {% include 'authenticity_token' %}
-      <input type="hidden" name="status" value="app.order_statuses.paid"/>
-      <input type="hidden" name="order_id" value="{{ order.id }}"/>
+      <input type="hidden" name="status" value="app.statuses.orders.paid"/>
+      <input type="hidden" name="object_id" value="{{ order.id }}"/>
 
       <button class="button button-sm">{{ 'app.mark-as-paid' | t }}</button>
     </form>
   {% endif %}
 
-  <form action="/order_statuses/create" method="post" class="mt-2">
+  <form action="/statuses/create" method="post" class="mt-2">
     {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.order_statuses.canceled"/>
-    <input type="hidden" name="order_id" value="{{ order.id }}"/>
+    <input type="hidden" name="status" value="app.statuses.orders.canceled"/>
+    <input type="hidden" name="object_id" value="{{ order.id }}"/>
 
     <button class="button button-sm button-secondary">{{ 'app.cancel' | t }}</button>
   </form>
 {% endif %}
 
-{% if order.status.name == 'app.order_statuses.paid' %}
-  <form action="/order_statuses/create" method="post" class="mt-2">
+{% if order.status.name == 'app.statuses.orders.paid' %}
+  <form action="/statuses/create" method="post" class="mt-2">
     {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.order_statuses.shipped"/>
-    <input type="hidden" name="order_id" value="{{ order.id }}"/>
+    <input type="hidden" name="status" value="app.statuses.orders.shipped"/>
+    <input type="hidden" name="object_id" value="{{ order.id }}"/>
 
     <button class="button button-sm button-secondary">{{ 'app.ship' | t }}</button>
   </form>
