--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -19,7 +19,7 @@
             {% function item_url = 'link_to', path: '/items/', item: order.item %}
             <a href="{{ item_url }}">
               {{ order.item.name }}
-              <small> {{ order.item.status.name | default: 'app.item_statuses.none' | t }}</small>
+              <small> {{ order.item.status.name | default: 'app.statuses.items.none' | t }}</small>
             </a>
           </td>
           <td class="px-4 py-2 text-left border-b">{{ order.seller.name }}</td>
@@ -27,8 +27,8 @@
           <td class="px-4 py-2 text-left border-b">{{ order.buyer.name }}</td>
           <td class="px-4 py-2 text-left border-b">
             {{ order.status.name | default: 'missing-state-invalid-order' | t }}
-            {% if order.order_status.timestamp %}
-            <br/><small>{{ order.order_status.timestamp | to_time | l }}</small>
+            {% if order.status.timestamp %}
+            <br/><small>{{ order.status.timestamp | to_time | l }}</small>
             {% endif %}
           </td>
           <td class="px-4 py-2 text-left border-b">{{ order.total | pricify_cents }}</td>
