--- a/app/views/partials/lib/consumers/status_created/update_metrics_cache.liquid
+++ b/app/views/partials/lib/consumers/status_created/update_metrics_cache.liquid
@@ -1,7 +1,13 @@
 {% liquid
-  function order = 'lib/data/queries/orders/find', id: event.target.id
 
-  if order.status.name == 'app.statuses.orders.paid'
-    function report = 'lib/commands/metrics/create'
+  function status = 'lib/data/queries/statuses/find', id: event.object.id
+
+  if status.scope == 'app.statuses.items'
+    assign object = '{}' | parse_json
+    hash_assign object['id'] = event.target.id
+    hash_assign object['c__status'] = status.fullname
+
+    function object = 'lib/commands/execute', mutation_name: 'items/update' object: object, selection: 'model_update'
+    log object
   endif
 %}
