--- a/app/views/partials/theme/simple/dashboard/items/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/items/index.liquid
@@ -23,7 +23,6 @@
             {% function item_url = 'link_to', path: '/items/', item: item %}
             <a href="{{ item_url }}">
               {{ item.name }}
-              <small> {% print item.c__status | t %}</small>
             </a>
           </td>
           <td class="px-4 py-2 border-b">{{ item.category }}</td>
@@ -36,6 +35,7 @@
                 </option>
               {% endfor %}
             </select>
+            <small> {% print item.c__status %}</small>
           </td>
           <td class="px-4 py-2 border-b">{{ item.created_at | l }}</td>
           <!--
