--- a/app/views/pages/statuses/create.liquid
+++ b/app/views/pages/statuses/create.liquid
@@ -5,12 +5,10 @@ method: post
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function object = 'lib/commands/statuses/create', object: context.params.status, current_profile_id: current_profile.id
-
-  log object
-
+  function object = 'lib/commands/statuses/create', object: context.params.status, profile_id: current_profile.id
   if object.valid
     include 'lib/commands/events/create', type: 'status_created', actor_id: current_profile.id, object_id: object.id, target_id: object.object_id
+
     include 'redirect_to', url: '/statuses'
   else
     log object
