--- a/app/views/partials/lib/commands/statuses/create/check.liquid
+++ b/app/views/partials/lib/commands/statuses/create/check.liquid
@@ -21,6 +21,10 @@
     include 'lib/register_error', contract: c, field_name: 'object_id', key: 'app.errors.blank'
   endif
 
+  if object.profile_id == blank
+    include 'lib/register_error', contract: c, field_name: 'profile_id', key: 'app.errors.blank'
+  endif
+
   hash_assign object['valid'] = c.valid
   hash_assign object['errors'] = c.errors
 
