--- a/app/views/partials/redirect_to.liquid
+++ b/app/views/partials/redirect_to.liquid
@@ -5,6 +5,10 @@
     session return_to = null
   endif
 
+  if context.params.return_to
+    assign url = context.params.return_to
+  endif
+
   include 'lib/flash/publish', notice: notice, error: error
   redirect_to url
   break
