--- a/app/views/partials/theme/simple/dashboard/orders/actions/admin.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions/admin.liquid
@@ -1,44 +1,35 @@
 {% if order.status.name == 'app.statuses.orders.placed' %}
-  {% if order.properties.paid_at == null %}
-    <form action="/statuses/create" method="post">
-      {% include 'authenticity_token' %}
-      <input type="hidden" name="status" value="app.statuses.orders.paid"/>
-      <input type="hidden" name="order_id" value="{{ order.id }}"/>
+  {% render 'theme/simple/statuses/quick_form',
+    authenticity_token: context.authenticity_token,
+    name: 'paid',
+    scope: 'app.statuses.orders',
+    object_id: order.id,
+    return_to: context.location.href,
+    label: 'app.mark-as-paid' %}
 
-      <button class="button button-sm">{{ 'app.mark-as-paid' | t }}</button>
-    </form>
-  {% endif %}
+  {% render 'theme/simple/statuses/quick_form',
+    authenticity_token: context.authenticity_token,
+    name: 'paid',
+    scope: 'app.statuses.orders',
+    object_id: order.id,
+    return_to: context.location.href,
+    label: 'app.pay' %}
 
-  {% if order.properties.paid_at == null %}
-    <form action="/statuses/create" method="post" class="mt-2">
-      {% include 'authenticity_token' %}
-      <input type="hidden" name="status" value="app.statuses.orders.paid"/>
-      <input type="hidden" name="order_id" value="{{ order.id }}"/>
-
-      <button class="button button-sm">{{ 'app.pay' | t }}</button>
-    </form>
-
-    <a href="/orders/review?order_id={{order.id}}" class="button button-sm mt-2">
-      {{ 'app.pay_online' | t }}
-    </a>
-  {% endif %}
-
-  <form action="/statuses/create" method="post" class="mt-2">
-    {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.statuses.orders.canceled"/>
-    <input type="hidden" name="order_id" value="{{ order.id }}"/>
-
-    <button class="button button-sm button-secondary">{{ 'app.cancel' | t }}</button>
-  </form>
+  {% render 'theme/simple/statuses/quick_form',
+    authenticity_token: context.authenticity_token,
+    name: 'cancelled',
+    scope: 'app.statuses.orders',
+    object_id: order.id,
+    return_to: context.location.href,
+    label: 'app.cancel', secondary: true %}
 {% endif %}
 
-{% if order.status.name == 'app.statuses.orders.paid' %}
-  <form action="/statuses/create" method="post" class="mt-2">
-    {% include 'authenticity_token' %}
-    <input type="hidden" name="status" value="app.statuses.orders.shipped"/>
-    <input type="hidden" name="order_id" value="{{ order.id }}"/>
-
-    <button class="button button-sm button-secondary">{{ 'app.ship' | t }}</button>
-  </form>
+{% if order.status.fullname == 'app.statuses.orders.paid' %}
+  {% render 'theme/simple/statuses/quick_form',
+    authenticity_token: context.authenticity_token,
+    name: 'shipped',
+    scope: 'app.statuses.orders',
+    object_id: order.id,
+    return_to: context.location.href,
+    label: 'app.ship' %}
 {% endif %}
-
