--- a/app/views/partials/theme/simple/home/card.liquid
+++ b/app/views/partials/theme/simple/home/card.liquid
@@ -1,4 +1,4 @@
-<div class="flex flex-col mb-8 bg-white rounded shadow">
+<div class="flex flex-col bg-white rounded shadow">
   {% if object.photo %}
     <a class="block w-full h-64 overflow-hidden rounded-tl rounded-tr" href="{{ object.url }}">
       <img alt="{{ object.name | default: object.id | truncate: 120 }}" class="block object-cover object-center w-full h-full" src="{{ object.photo.url.versions.small }}">
@@ -10,6 +10,7 @@
   {% endif %}
 
   <div class="p-4">
+    <!-- TODO: If empty, dont show. -->
     <h2 class="text-lg font-medium text-gray-900 ">
       <a href="{% render 'link_to', comment: target %}">{{ item.name }}</a>
     </h2>
