--- a/app/views/partials/theme/simple/home/hero.liquid
+++ b/app/views/partials/theme/simple/home/hero.liquid
@@ -1,4 +1,4 @@
-<div class="relative flex items-end min-h-64 mb-8 text-white bg-cover flex-column" style="background-image: url({{ 'images/home-hero.jpg' | asset_url }})">
+<div class="relative flex items-end mb-8 text-white bg-cover min-h-64 flex-column" style="background-image: url({{ 'images/home-hero.jpg' | asset_url }})">
   <div class="absolute top-0 left-0 w-full h-full bg-black bg-opacity-50"></div>
   <div class="z-10 w-full p-8 md:p-16">
     <h1 class="text-2xl font-black leading-none uppercase md:text-5xl">{{ 'app.hero.main-sentence' | t }}</h1>
@@ -10,6 +10,6 @@
     <p>
       <a href="/search" class="mt-5 mr-3 text-lg button">{{ 'app.hero.shop' | t }}</a>
       <a href="/dashboard/items/new" class="mt-5 text-lg button button-secondary">{{ 'app.hero.sell' | t }}</a>
-	</p>
+    </p>
   </div>
 </div>
