--- a/app/views/partials/theme/simple/home/quick_search_form.liquid
+++ b/app/views/partials/theme/simple/home/quick_search_form.liquid
@@ -1,11 +1,13 @@
-<div class="mr-3 mb-5 md:ml-auto">
-  <form action="/quick_search" name="search"> 
-    <div class="relative mt-6 inline">
-      <span class="absolute inset-y-0 left-0 pl-3 flex items-center">
-        <svg class="h-5 w-5 text-gray-500" viewBox="0 0 24 24" fill="none"> <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </svg>
-      </span>
-      <input class="form-input pl-10 pr-4 py-1" name="qkeyword" type="text" value="{{ qkeyword | raw_escape_string }}" placeholder="{% print 'app.quick_search.name' | t %}">
-    </div>
-    <button name="submit" value="search" class="button button-secondary button-sm">{{ 'app.search.search' | t  }}</button>
-  </form>
-</div>
+<form action="/quick_search" name="search" class="flex mx-auto md:ml-auto">
+  <label for="qkeyword" class="relative">
+    <span class="sr-only">Search</span>
+
+    <span class="absolute inset-y-0 left-0 flex items-center pl-3">
+      <svg class="w-5 h-5 text-gray-500" viewBox="0 0 24 24" fill="none"> <path d="M21 21L15 15M17 10C17 13.866 13.866 17 10 17C6.13401 17 3 13.866 3 10C3 6.13401 6.13401 3 10 3C13.866 3 17 6.13401 17 10Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path> </svg>
+    </span>
+
+    <input class="py-1 pl-10 pr-4 form-input" name="qkeyword" id="qkeyword" type="text" value="{{ qkeyword | raw_escape_string }}" placeholder="{% print 'app.quick_search.name' | t %}">
+  </label>
+
+  <button name="submit" value="search" class="ml-3 button button-secondary button-sm">{{ 'app.search.search' | t  }}</button>
+</form>
