Fix mobile tap areas

--- a/app/views/partials/theme/simple/layout/footer.liquid
+++ b/app/views/partials/theme/simple/layout/footer.liquid
@@ -13,7 +13,7 @@
     <div class="flex flex-wrap flex-grow mt-10 -mb-10 text-center md:pl-20 md:mt-0 md:text-left">
       <div class="w-full px-4 lg:w-1/4 md:w-1/2">
         <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900">{{ 'app.footer.header.title.general' | t }}</h2>
-        <ul class="mb-10 list-none">
+        <ul class="mb-10 leading-loose list-none">
           <li>
             <a href="/" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.home' | t }}</a>
           </li>
@@ -27,7 +27,7 @@
       </div>
       <div class="w-full px-4 lg:w-1/4 md:w-1/2">
         <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900">{{ 'app.footer.header.title.join' | t }}</h2>
-        <ul class="mb-10 list-none">
+        <ul class="mb-10 leading-loose list-none">
           <li>
             <a href="/sign-up" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.sign_up' | t }}</a>
           </li>
@@ -38,7 +38,7 @@
       </div>
       <div class="w-full px-4 lg:w-1/4 md:w-1/2">
         <h2 class="mb-3 text-sm font-medium tracking-widest text-gray-900">{{ 'app.footer.header.title.support' | t }}</h2>
-        <ul class="mb-10 list-none">
+        <ul class="mb-10 leading-loose list-none">
           <li>
             <a href="/contact-us" class="hover:text-gray-800 hover:underline">{{ 'app.footer.header.list.contact_us' | t }}</a>
           </li>
