Put terms into translations

--- a/app/views/partials/theme/simple/terms-of-service.liquid
+++ b/app/views/partials/theme/simple/terms-of-service.liquid
@@ -1,33 +1,36 @@
 <div class="container w-full xl:w-4/5 mt-10 mb-32 text-lg">
   <div class="text-2xl font-bold text-center">
     <h1 class="uppercase">{{'app.title' | t}}</h1>
-    <h1>TERMS OF SERVICE</h1>
+    <h1>{{ 'app.terms.terms-of-service' | t }}</h1>
   </div>
 
-  <p class="mt-8 text-center text-sm">These Terms of Service were last updated on September 1, 2019.</p>
+  <p class="mt-8 text-center text-sm">{{ 'app.terms.last-updated' | t }}</p>
 
-  <p class="mt-8">MVP MARKETPLACE CORPORATION ("MVP MARKETPLACE," "we," "us," and/or "our") provides its services (described below) to you through its mobile applications and other software made available by MVP MARKETPLACE ("Software") and its website located at http://www.MVP MARKETPLACE.com (the "Site") (collectively, such services, Software and the Site, collectively, the "Service(s)"), subject to the following Terms of Service (as amended from time to time, these "Terms of Service"). We reserve the right, at our sole discretion, to change or modify portions of these Terms of Service at any time without further notice. You should periodically visit this page to review the current Terms of Service so you are aware of any revision to which you are bound. If we do this, we will post the changes to these Terms of Service on this page and will indicate at the top of this page the date these terms were last revised. We will also notify you, either through the Services user interface, in an email notification or through other reasonable means. Any such changes will become effective for existing users no earlier than ten (10) days after they are posted, except that changes addressing new functions of the Services or changes made for legal reasons will be effective immediately. Your continued use of the Service after the date any such changes become effective constitutes your acceptance of the new Terms of Service. If you do not agree to abide by these or any future Terms of Service, do not use or access (or continue to use or access) the Service.</p>
+  <p class="mt-8">{{ 'app.terms.section1' | t }}</p>
 
-  <p class="text-xl font-bold mt-5">PLEASE READ THESE TERMS OF SERVICE CAREFULLY AS THEY CONTAIN AN AGREEMENT TO ARBITRATE AND OTHER IMPORTANT INFORMATION REGARDING YOUR LEGAL RIGHTS, REMEDIES AND OBLIGATIONS. THE AGREEMENT TO ARBITRATE REQUIRES (WITH LIMITED EXCEPTION) THAT YOU SUBMIT CLAIMS YOU HAVE AGAINST US TO BINDING AND FINAL ARBITRATION, AND FURTHER (1) YOU WILL ONLY BE PERMITTED TO PURSUE CLAIMS AGAINST COMPANY ON AN INDIVIDUAL BASIS, NOT AS A PLAINTIFF OR CLASS MEMBER IN ANY CLASS OR REPRESENTATIVE ACTION OR PROCEEDING, AND (2) YOU WILL ONLY BE PERMITTED TO SEEK RELIEF (INCLUDING MONETARY, INJUNCTIVE, AND DECLARATORY RELIEF) ON AN INDIVIDUAL BASIS. PLEASE INDICATE YOUR ACCEPTANCE TO THESE TERMS OF SERVICE IN ACCORDANCE WITH THE INSTRUCTIONS PROVIDED BY MVP MARKETPLACE. INDICATING ACCEPTANCE ESTABLISHES A BINDING AND EXECUTED WRITTEN AGREEMENT BETWEEN YOU AND MVP MARKETPLACE. IF YOU DO NOT ACCEPT THESE TERMS OF SERVICE, YOU CANNOT USE THE SERVICE.</p>
+  <p class="text-xl font-bold mt-5">{{ 'app.terms.please-read' | t }}</p>
 
-  <p class="mt-2">In addition, when using certain services, you shall be subject to any additional terms, policies or guidelines applicable to such services that may be posted on the Service from time to time, including, without limitation,
-  </p><p>the Privacy Policy at&nbsp;<a href="http://www.getmarketplace.co/privacy-policy" class="link">http://www.getmarketplace.co/privacy-policy</a>&nbsp;</p>
-  <p>the Fee Policy at&nbsp;<a href="http://www.getmarketplace.co/fee_policy" class="link">http://www.getmarketplace.co/fee_policy</a>&nbsp;</p>
-  <p>and the Prohibited Items Policy at&nbsp;<a href="http://www.getmarketplace.co/prohibited_items_policy" class="link">http://www.getmarketplace.co/prohibited_items_policy</a>. </p>
-  <p>All such terms, policies and guidelines are hereby incorporated by reference into these Terms of Service.</p>
+  <p class="mt-2">{{ 'app.terms.in-addition' | t }}</p>
+  <p>{{ 'app.terms.the-privacy-policy-at' | t }}&nbsp;<a href="http://www.getmarketplace.co/privacy-policy" class="link">http://www.getmarketplace.co/privacy-policy</a>&nbsp;</p>
+  <p>{{ 'app.terms.the-fee-policy-at' | t }}&nbsp;<a href="http://www.getmarketplace.co/fee_policy" class="link">http://www.getmarketplace.co/fee_policy</a>&nbsp;</p>
+  <p>{{ 'app.terms.and-the-prohibited' | t }}&nbsp;<a href="http://www.getmarketplace.co/prohibited_items_policy" class="link">http://www.getmarketplace.co/prohibited_items_policy</a>. </p>
+  <p>{{ 'app.terms.all-such-terms' | t }}</p>
 
-  <h3 class="text-xl font-bold mt-8">Termination</h3>
-  <p class="mt-2">You agree that MVP MARKETPLACE, in its sole discretion, may suspend or terminate your account (or any part thereof) or use of the Service and remove and discard any items or content within the Service, for any reason, including, without limitation, for lack of use or if MVP MARKETPLACE believes that you have violated or acted inconsistently with the letter or spirit of these Terms of Service. Any suspected fraudulent, abusive or illegal activity that may be grounds for termination of your use of Service, may be referred to appropriate law enforcement authorities. MVP MARKETPLACE may also in its sole discretion and at any time discontinue providing the Service, or any part thereof, with or without notice. You agree that any termination of your access to the Service under any provision of these Terms of Service may be effected without prior notice, and acknowledge and agree that MVP MARKETPLACE may immediately deactivate or delete your account and all related information and files in your account and/or bar any further access to such files or the Service. Further, you agree that MVP MARKETPLACE shall not be liable to you or any third-party for any termination of your access to the Service.&nbsp;</p>
+  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.termination' | t }}</h3>
+  <p class="mt-2">{{ 'app.terms.termination-content' | t }}&nbsp;</p>
 
-  <h3 class="text-xl font-bold mt-8">User Disputes</h3>
-  <p class="mt-2">You agree that you are solely responsible for your interactions (including any purchase and sale transactions) with any other user in connection with the Service and MVP MARKETPLACE will have no liability or responsibility with respect thereto. MVP MARKETPLACE reserves the right, but has no obligation, to become involved in any way with disputes between you and any other user of the Service.&nbsp;</p>
+  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.user-disputes' | t }}</h3>
+  <p class="mt-2">{{ 'app.terms.user-disputes-content' | t }}&nbsp;</p>
 
-  <h3 class="text-xl font-bold mt-8">General</h3>
-  <p class="mt-2">These Terms of Service constitute the entire agreement between you and MVP MARKETPLACE and govern your use of the Service, superseding any prior agreements between you and MVP MARKETPLACE with respect to the Service. You also may be subject to additional terms and conditions that may apply when you use affiliate or third-party services, third-party content or third-party software. These Terms of Service shall be governed by the laws of the State of California without regard to its conflict of law provisions. With respect to any disputes or claims not subject to arbitration, as set forth above, you and MVP MARKETPLACE agree to submit to the personal and exclusive jurisdiction of the state and federal courts located within San Diego County, California. The failure of MVP MARKETPLACE to exercise or enforce any right or provision of these Terms of Service shall not constitute a waiver of such right or provision. If any provision of these Terms of Service is found by a court of competent jurisdiction to be invalid, the parties nevertheless agree that the court should endeavor to give effect to the parties' intentions as reflected in the provision, and the other provisions of these Terms of Service remain in full force and effect. You agree that regardless of any statute or law to the contrary, any claim or cause of action arising out of or related to use of the Service or these Terms of Service must be filed within one (1) year after such claim or cause of action arose or be forever barred. A printed version of this agreement and of any notice given in electronic form shall be admissible in judicial or administrative proceedings based upon or relating to this agreement to the same extent and subject to the same conditions as other business documents and records originally generated and maintained in printed form. The section titles in these Terms of Service are for convenience only and have no legal or contractual effect. Notices to you may be made via either email or regular mail. The Service may also provide notices to you of changes to these Terms of Service or other matters by displaying notices or links to notices generally on the Service.&nbsp;</p>
+  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.general' | t }}</h3>
+  <p class="mt-2">{{ 'app.terms.general-content' | t }}</p>
 
-  <h3 class="text-xl font-bold mt-8">Your Privacy</h3>
-  <p class="mt-2">At MVP MARKETPLACE, we respect the privacy of our users. For details please see our Privacy Policy. By using the Service, you consent to our collection and use of personal data as outlined therein.&nbsp;</p>
+  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.your-privacy' | t }}</h3>
+  <p class="mt-2">{{ 'app.terms.your-privacy-content' | t }}</p>
 
-  <h3 class="text-xl font-bold mt-8">Questions? Concerns? Suggestions?&nbsp;</h3>
-  <p class="mt-2">Please contact us at&nbsp;<a href="mailto:support@getmarketplace.co" class="link">support@getmarketplace.co</a>. to report any violations of these Terms of Service or to pose any questions regarding these Terms of Service or the Service. </p>
+  <h3 class="text-xl font-bold mt-8">{{ 'app.terms.questions' | t }}</h3>
+  <p class="mt-2">{{ 'app.terms.please-contact' | t }}&nbsp;
+    <a href="mailto:support@getmarketplace.co" class="link">support@getmarketplace.co</a>
+    {{ 'app.terms.please-contact-continue' | t  }}
+  </p>
 </div>
