Fixed the search results grid and small button version

--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap my-6">
+<div class="flex my-6">
   <div class="w-full md:flex-1 md:w-auto">
     <label for="k" class="block mb-1 capitalize">{{ 'app.search.keywords' | t }}</label>
     <input class="w-full form-input"
