--- a/app/views/partials/theme/simple/home/search_form.liquid
+++ b/app/views/partials/theme/simple/home/search_form.liquid
@@ -1,6 +1,6 @@
-<div class="flex my-6">
-  <div class="w-full md:flex-1 md:w-auto">
-    <label for="k" class="block mb-1 capitalize">{{ 'app.search.keywords' | t }}</label>
+<div class="flex flex-wrap lg:flex-no-wrap items-end my-6">
+  <div class="w-full mb-5 lg:mb-0 flex-0 lg:flex-1 lg:w-auto">
+    <label for="k" class="block mb-1 w-full capitalize">{{ 'app.search.keywords' | t }}</label>
     <input class="w-full form-input"
       name="keyword"
       id="keyword"
@@ -9,7 +9,7 @@
      />
   </div>
 
-  <div class="w-full my-6 md:my-0 md:ml-6 md:w-auto">
+  <div class="w-full mb-5 md:mb-0 lg:ml-6 md:w-auto">
     <label for="category" class="block mb-1 capitalize">{{ 'app.search.category' | t }}</label>
     <select class="w-full form-select" id="category" name="category">
       <option value="" class="">{{ 'app.search.all_categories' | t }}</option>
@@ -23,7 +23,7 @@
     </select>
   </div>
 
-  <div class="w-full my-6 md:my-0 md:mx-6 md:w-auto">
+  <div class="w-full mb-5 md:mb-0 md:mx-6 md:w-auto">
     <label for="sort_by" class="block mb-1 capitalize">{{ 'app.search.sort_by' | t }}</label>
     <select class="w-full form-select" id="sort_by" name="sort_by">
       {% assign sort = filters.query.sort_by | default: 'relevance' %}
@@ -33,7 +33,7 @@
     </select>
   </div>
 
-  <button name="submit" value="search" class="w-full md:mt-auto md:w-auto button">{{ 'app.search.search' | t }}</button>
+  <button name="submit" value="search" class="w-full md:w-auto ml-auto button">{{ 'app.search.search' | t }}</button>
 </div>
 
 <p class="text-lg text-gray-700">
