--- a/app/views/partials/lib/current_profile.liquid
+++ b/app/views/partials/lib/current_profile.liquid
@@ -15,5 +15,12 @@
   endif
 
   function profile = 'lib/data/queries/profiles/find', user_id: user_id, id: id, followships: followships, membership: membership
+
+  if require_profile == false
+    return profile
+  elsif profile.slug == blank
+    include 'redirect_to', url: "/dashboard/profile/edit", notice: 'app.profiles.incomplete'
+  endif
+
   return profile
 %}
