--- a/app/views/pages/dashboard/groups/edit.liquid
+++ b/app/views/pages/dashboard/groups/edit.liquid
@@ -6,11 +6,12 @@ metadata:
     - label: app.edit
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
 
-  function group = 'lib/data/queries/groups/find', id: context.params.id, owner_id: context.current_user.id
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function group = 'lib/data/queries/groups/find', id: context.params.id, owner_id: current_profile.id
   function presigned_url = 'lib/data/queries/presigned_url'
 
+  include 'lib/can_edit_group', profile_id: current_profile.id, group: group
   include 'theme/simple/dashboard/breadcrumbs', name: 'groups', total_entries: groups.total_entries, role: 'community'
   include 'theme/simple/dashboard/groups/edit', user: context.current_user, object: group, presigned_url: presigned_url
 %}
