--- a/app/views/pages/dashboard/items/new.liquid
+++ b/app/views/pages/dashboard/items/new.liquid
@@ -6,8 +6,8 @@ metadata:
     - label: app.new
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
 
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
   function filters = 'lib/data/queries/search/filters', query: context.params
   function presigned_url = 'lib/data/queries/presigned_url'
 
