--- a/app/views/pages/admin/support-tickets/show.liquid
+++ b/app/views/pages/admin/support-tickets/show.liquid
@@ -5,7 +5,7 @@ slug: admin/support-tickets/show
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
   include 'lib/must_be_superadmin'
 
-  assign contact_id = context.params.slug3 | split: '-' | last
+  assign contact_id = context.params.slugs | split: '-' | last
   function contact = 'lib/data/queries/contacts/find', id: contact_id
   include 'lib/present_or_404', property: contact.id
 
