The photo on item page is not streached anymore

--- a/app/views/partials/theme/simple/items/show.liquid
+++ b/app/views/partials/theme/simple/items/show.liquid
@@ -28,7 +28,7 @@
         </div>
       {% else %}
         {% function cover_url = 'theme/simple/items/cover_url', item: item %}
-        <img alt="{{ item.name }}" class="object-center w-full h-full rounded" src="{{ cover_url }}">
+        <img alt="{{ item.name }}" class="object-center w-full rounded" src="{{ cover_url }}">
       {% endif %}
     </div>
 
