--- a/app/views/partials/theme/simple/profile/sections/groups.liquid
+++ b/app/views/partials/theme/simple/profile/sections/groups.liquid
@@ -1,4 +1,4 @@
-<section class="grid grid-cols-3 gap-5">
+<section class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 md:gap-5">
   {% for record in list.results %}
     {% render 'theme/simple/groups/card', group: record, current_profile: current_profile %}
   {% else %}
