--- a/app/views/partials/theme/simple/profile/sections/products.liquid
+++ b/app/views/partials/theme/simple/profile/sections/products.liquid
@@ -1,4 +1,4 @@
-<div class="grid grid-cols-3 gap-5">
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 md:gap-5">
   {% for item in list.results %}
     {% render 'theme/simple/items/card', item: item, current_profile: current_profile %}
   {% else %}
